# Linalg

./: .gitattributes  CMakeLists.txt
src/: main.cpp
src/math/: matrix.h  vector.h
